@@ -1,7 +1,7 @@
 use ExtUtils::MakeMaker;
 WriteMakefile(
               'NAME'	=> 'WWW::Search::Ebay',
-              'VERSION' => '2.11',
+              'VERSION' => '2.13',
               'PREREQ_PM' => {
                               # The module's version, not the
                               # distribution's version:
