@@ -1,45 +1,96 @@
-# Before `make install' is performed this script should be runnable with
-# `make test'. After `make install' it should work as `perl test.pl'
-
 use ExtUtils::testlib;
-use WWW::Search;
-use WWW::Search::Test qw( new_engine run_test );
+use Test::More no_plan;
 
-######################### We start with some black magic to print on failure.
+BEGIN { use_ok('WWW::Search') };
+BEGIN { use_ok('WWW::Search::Test', qw( count_results )) };
+BEGIN { use_ok('WWW::Search::Ebay') };
 
-# Change 1..1 below to 1..last_test_to_print .
-# (It may become useful if the test is moved to ./t subdirectory.)
+my $iDebug;
+my $iDump = 0;
 
-# 6 tests without "goto MULTI_RESULT"
-BEGIN { $| = 1; print "1..6\n"; }
-END {print "not ok 1\n" unless $loaded;}
-$loaded = 1;
+&my_new_engine('Ebay');
 
-######################### End of black magic.
+# goto BYENDDATE;
+# goto CONTENTS_BYENDDATE;
 
-# Insert your test code below (better if it prints "ok 13"
-# (correspondingly "not ok 13") depending on the success of chunk 13
-# of the test code):
-
-$WWW::Search::Test::iTest = 0;
-
-&new_engine('Ebay');
-my $debug = 0;
-
+$iDebug = 0;
 # This test returns no results (but we should not get an HTTP error):
-&run_test($WWW::Search::Test::bogus_query, 0, 0, $debug);
+&my_test('normal', $WWW::Search::Test::bogus_query, 0, 0, $iDebug);
 # goto MULTI_RESULT;
-$debug = 0;
+$iDebug = 0;
 # This query usually returns 1 page of results:
-&run_test('starballz', 1, 49, $debug);
-# goto MULTI_RESULT;
-$debug = 0;
-# This query usually returns 2 pages of results:
-&run_test('fortuna', 51, 99, $debug);
+&my_test('normal', 'starballz', 1, 49, $iDebug);
 
 MULTI_RESULT:
-$debug = 0;
+$iDebug = 0;
 # This query returns hundreds of pages of results:
-&run_test('LEGO', 101, undef, $debug);
+&my_test('normal', 'LEGO', 101, undef, $iDebug);
 
-&new_engine('Ebay::ByEndDate');
+BYENDDATE:
+&my_new_engine('Ebay::ByEndDate');
+$iDebug = 0;
+# This test returns no results (but we should not get an HTTP error):
+&my_test('normal', $WWW::Search::Test::bogus_query, 0, 0, $iDebug);
+$iDebug = 0;
+# This query usually returns 1 page of results:
+&my_test('normal', 'starballz', 1, 49, $debug);
+
+CONTENTS:
+$iDebug = 0;
+# Now get some results and inspect them:
+my $o = new WWW::Search('Ebay');
+ok(ref $o);
+$o->native_query('Tobago flag');
+my @ao = $o->results();
+foreach my $oResult (@ao)
+  {
+  like($oResult->url, qr{\Ahttp://cgi\d*\.ebay\.com},
+       'result URL is really from ebay.com');
+  cmp_ok($oResult->title, 'ne', '',
+         'result Title is not empty');
+  cmp_ok($oResult->change_date, 'ne', '',
+         'result date is not empty');
+  like($oResult->description, qr{([0-9]+|no)\s+bids?},
+       'result bidcount is ok');
+  } # foreach
+CONTENTS_BYENDDATE:
+$iDebug = 0;
+# Now get some ByEndDate results and inspect them:
+my $o = new WWW::Search('Ebay::ByEndDate');
+ok(ref $o);
+$o->native_query('Tobago flag',
+                   {
+                    search_debug => $iDebug,
+                   },
+                );
+my @ao = $o->results();
+foreach my $oResult (@ao)
+  {
+  like($oResult->url, qr{\Ahttp://cgi\d*\.ebay\.com},
+       'result URL is really from ebay.com');
+  cmp_ok($oResult->title, 'ne', '',
+         'result Title is not empty');
+  cmp_ok($oResult->change_date, 'ne', '',
+         'result date is not empty');
+  like($oResult->description, qr{([0-9]+|no)\s+bids?},
+       'result bidcount is ok');
+  } # foreach
+
+sub my_new_engine
+  {
+  my $sEngine = shift;
+  $WWW::Search::Test::oSearch = new WWW::Search($sEngine);
+  ok(ref($WWW::Search::Test::oSearch), "instantiate WWW::Search::$sEngine object");
+  } # my_new_engine
+
+sub my_test
+  {
+  # Same arguments as WWW::Search::Test::count_results()
+  my ($sType, $sQuery, $iMin, $iMax, $iDebug, $iPrintResults) = @_;
+  my $iCount = &count_results(@_);
+  cmp_ok($iCount, '>=', $iMin, qq{lower-bound num-hits for query=$sQuery}) if defined $iMin;
+  cmp_ok($iCount, '<=', $iMax, qq{upper-bound num-hits for query=$sQuery}) if defined $iMax;
+  } # my_test
+
+
+__END__
